--- a/Pepsi/css/style.css
+++ b/Pepsi/css/style.css
@@ -1,10 +1,23 @@
-*{
-    margin: 0;
+*, *::before, *::after{
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+html{
+    font-size: 1.4rem;
+    font-family: sans-serif;
+    line-height: 30px;
 }
 
+.preloader{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    right: 0;
+    background-color: #000;
+    z-index: 999999;
+}
 section{
     background-color: #0062be;
     position: relative;
@@ -70,12 +83,12 @@ align-items: center;
    color: #fff;
    font-weight: 900;
    text-transform: uppercase;
-   font-size: 4em;
+   font-size: 2.5rem;
    line-height: 1.5em;
 }
 
 .content .textBox span{
-    font-size: 2em;
+    font-size: 1.9em;
  }
 
  .content .textBox p{
@@ -85,8 +98,6 @@ align-items: center;
  .content .textBox a{
     display: inline-block;
     font-weight: 500;
-    color: #111;
-    text-transform: uppercase;
     text-decoration: none;
     background-color: #fff;
     margin-top: 20px;
@@ -159,6 +170,10 @@ display: inline-block;
 
 /* Media Query*/
 @media (max-width: 991px){
+
+    html{
+    font-size: 1rem;
+}
     section{
         padding: 40px;
         padding-bottom: 140px;
@@ -193,11 +208,10 @@ display: inline-block;
         color:#111;
         font-weight: 400;
         margin: 10px 0;
-        font-size: 2em;
+        font-size: 2rem
     }
     header ul li a:hover{
-        color:#ed0223;
-       
+        color:#ed0223; 
     }
     .toggleMenu{
         position: relative;
@@ -223,16 +237,15 @@ display: inline-block;
        flex-direction: column;
        margin-top: 80px;
     }
+    .content .textBox h1 {
+    font-size: 2rem;
+}
     .content .textBox {
         position: relative;
         max-width: 100%;
         padding-right: 20px;
     }
-    .content .textBox h1{
-        font-size: 3em;
-    }
     .content .textBox a {
-       font-size: 0.8em;
        font-weight: 700;
        padding: 10px;
     }
