--- a/Pepsi/css/style.css
+++ b/Pepsi/css/style.css
@@ -147,7 +147,7 @@ display: inline-block;
 }
 
 .social{
-    position: absolute;
+    position: fixed;
     top: 50%;
     transform: translateY(-50%);
     right: 10px;
